--- a/src/main/resources/templates/county/county-list.html
+++ b/src/main/resources/templates/county/county-list.html
@@ -72,8 +72,8 @@
                         <th scope="col">#</th>
                         <th scope="col">Name</th>
 
-                        <!-- Country name -->
-                        <th scope="col">Country</th>
+                        <!-- Country name
+                        <th scope="col">Country</th>-->
 
                         <th scope="col">Action</th>
                     </tr>
@@ -83,8 +83,8 @@
                         <th scope="row" th:text="${county.id}"></th>
                         <td th:text="${county.name}"></td>
 
-                        <!-- Country name for County -->
-                        <td th:text="${country.name}"></td>
+                        <!-- Country name for County 
+                        <td th:text="${country.name}"></td>-->
 
                         <td>
                             <a th:if="${county.active} == true" th:href="@{/county/update/{id}(id=${county.id})}" class="btn btn-dark">Update</a>
