--- a/src/main/resources/templates/country/country-list.html
+++ b/src/main/resources/templates/country/country-list.html
@@ -1,70 +1,57 @@
 <!doctype html>
 <html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
-    <title>Country list</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <title>Country list | SDA Study Information System</title>
 </head>
 <body>
-
-<div>
-    <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
-            <a class="navbar-brand" href="#">SDA School</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/teacher/">Teacher</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/student/">Student</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                           data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            Settings
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="/specialized-field/">Specialized Field</a>
-                            <a class="dropdown-item" href="/category/">Category</a>
-                            <a class="dropdown-item" href="/school/">School</a>
-                            <a class="dropdown-item" href="/city/">City</a>
-                            <a class="dropdown-item" href="/country/">Country</a>
-                            <a class="dropdown-item" href="/county/">County</a>
-                        </div>
-                    </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </nav>
-    </div>
-
+<div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-primary">
+        <a class="navbar-brand" href="/">SDA School</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/teacher/">Teacher</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/student/">Student</a>
+                </li>
+                <li class="nav-item dropdown active">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Settings <span class="sr-only">(current)</span>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="/specialized-field/">Specialized Field</a>
+                        <a class="dropdown-item" href="/category/">Category</a>
+                        <a class="dropdown-item" href="/school/">School</a>
+                        <a class="dropdown-item" href="/city/">City</a>
+                        <a class="dropdown-item" href="/county/">County</a>
+                        <a class="dropdown-item" href="/country/">Country</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <br/>
+    <br/>
     <div class="container">
         <div class="jumbotron">
-
-            <h4 class="display-4">Countries list</h4>
+            <h4 class="display-4">Countries list <span class="float-right"><a href="/country/add" class="btn btn-success">Add country</a> </span></h4>
             <div th:if="${messageType} == 'success'" class="alert alert-success" role="alert">
                 <span th:text="${message}"></span>
             </div>
-            <a href="/country/add" type="button" class="btn btn-success">Add Country</a>
-            <div class="container" th:switch="${countries.size() > 0}">
+            <div th:if="${messageType} == 'error'" class="alert alert-danger" role="alert">
+                <span th:text="${message}"></span>
+            </div>
+            <div class="container-fluid" th:switch="${countries.size() > 0}">
                 <h3 th:case="false">No countries available!</h3>
                 <table th:case="true" class="table">
                     <thead>
@@ -79,7 +66,7 @@
                         <th scope="row" th:text="${country.id}"></th>
                         <td th:text="${country.name}"></td>
                         <td>
-                            <a th:if="${country.active} == true" th:href="@{/country/update/{id}(id=${country.id})}" class="btn btn-dark">Update</a>
+                            <a th:if="${country.active} == true" th:href="@{/country/update/{id}(id=${country.id})}" class="btn btn-primary">Update</a>
                             <a th:if="${country.active} == true" th:href="@{/country/delete/{id}(id=${country.id})}" class="btn btn-danger">Delete</a>
                             <a th:if="${country.active} == false" th:href="@{/country/restore/{id}(id=${country.id})}" class="btn btn-warning">Restore</a>
                         </td>
@@ -89,19 +76,9 @@
             </div>
         </div>
     </div>
-
 </div>
-
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
