--- a/src/main/resources/templates/category/category-list.html
+++ b/src/main/resources/templates/category/category-list.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>City list | SDA Study Information System</title>
+    <title>Category list | SDA Study Information System</title>
 </head>
 <body>
 <div class="container-fluid">
@@ -44,35 +44,31 @@
     <br/>
     <div class="container">
         <div class="jumbotron">
-            <h4 class="display-4">Cities list <span class="float-right"><a href="/city/add" class="btn btn-success">Add city</a> </span></h4>
+            <h4 class="display-4">Categories list <span class="float-right"><a href="/category/add" class="btn btn-success">Add category</a> </span></h4>
             <div th:if="${messageType} == 'success'" class="alert alert-success" role="alert">
                 <span th:text="${message}"></span>
             </div>
             <div th:if="${messageType} == 'error'" class="alert alert-danger" role="alert">
                 <span th:text="${message}"></span>
             </div>
-            <div class="container-fluid" th:switch="${cities.size() > 0}">
-                <h3 th:case="false">No cities available!</h3>
+            <div class="container-fluid" th:switch="${categories.size() > 0}">
+                <h3 th:case="false">No categories available!</h3>
                 <table th:case="true" class="table">
                     <thead>
                     <tr>
                         <th scope="col">#</th>
                         <th scope="col">Name</th>
-                        <th scope="col">County</th>
-                        <th scope="col">Country</th>
                         <th scope="col">Action</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="city : ${cities}">
-                        <th scope="row" th:text="${city.id}"></th>
-                        <td th:text="${city.name}"></td>
-                        <td th:text="${city.county.name}"></td>
-                        <td th:text="${city.country.name}"></td>
+                    <tr th:each="category : ${categories}">
+                        <th scope="row" th:text="${category.id}"></th>
+                        <td th:text="${category.name}"></td>
                         <td>
-                            <a th:if="${city.active} == true" th:href="@{/city/update/{id}(id=${city.id})}" class="btn btn-primary">Update</a>
-                            <a th:if="${city.active} == true" th:href="@{/city/delete/{id}(id=${city.id})}" class="btn btn-danger">Delete</a>
-                            <a th:if="${city.active} == false" th:href="@{/city/restore/{id}(id=${city.id})}" class="btn btn-warning">Restore</a>
+                            <a th:if="${category.active} == true" th:href="@{/category/update/{id}(id=${category.id})}" class="btn btn-primary">Update</a>
+                            <a th:if="${category.active} == true" th:href="@{/category/delete/{id}(id=${category.id})}" class="btn btn-danger">Delete</a>
+                            <a th:if="${category.active} == false" th:href="@{/category/restore/{id}(id=${category.id})}" class="btn btn-warning">Restore</a>
                         </td>
                     </tr>
                     </tbody>
