--- a/src/main/resources/templates/student/student-list.html
+++ b/src/main/resources/templates/student/student-list.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <title>Update SpecializedField | SDA Study Information System</title>
+    <title>Student list | SDA Study Information System</title>
 </head>
 <body>
 <div class="container-fluid">
@@ -44,25 +44,41 @@
     <br/>
     <div class="container">
         <div class="jumbotron">
-            <h4 class="display-4">Update Specialized Fields</h4>
+            <h4 class="display-4">Students list <span class="float-right"><a href="/student/add" class="btn btn-success">Add student</a> </span></h4>
+            <div th:if="${messageType} == 'success'" class="alert alert-success" role="alert">
+                <span th:text="${message}"></span>
+            </div>
             <div th:if="${messageType} == 'error'" class="alert alert-danger" role="alert">
                 <span th:text="${message}"></span>
             </div>
-            <form action="#" th:action="@{/specializedField/update/{id}(id=${specializedField.id})}" th:object="${specializedField}" method="post">
-                <div class="form-group">
-                    <label for="category">Select Category</label>
-                    <select th:field="*{category.id}" class="custom-select" id="category" required>
-                        <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}"></option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="name">Specialized Field name</label>
-                    <input type="text" th:field="*{name}" class="form-control" id="name" aria-describedby="nameHelp" required>
-                </div>
-                <input type="hidden" th:field="*{active}" class="form-control" id="active">
-                <button type="submit" class="btn btn-primary">Update</button>
-                <a href="/specializedField/" class="btn btn-success">Cancel</a>
-            </form>
+            <div class="container-fluid" th:switch="${students.size() > 0}">
+                <h3 th:case="false">No students available!</h3>
+                <table th:case="true" class="table">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">School</th>
+                        <th scope="col">Join Date</th>
+                        <th scope="col">Grade</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="student : ${students}">
+                        <th scope="row" th:text="${student.id}"></th>
+                        <td th:text="${student.name}"></td>
+                        <td th:text="${student.school.name}"></td>
+                        <td th:text="${student.joinDate}"></td>
+                        <td th:text="${student.grade}"></td>
+                        <td>
+                            <a th:if="${student.active} == true" th:href="@{/student/update/{id}(id=${student.id})}" class="btn btn-primary">Update</a>
+                            <a th:if="${student.active} == true" th:href="@{/student/delete/{id}(id=${student.id})}" class="btn btn-danger">Delete</a>
+                            <a th:if="${student.active} == false" th:href="@{/student/restore/{id}(id=${student.id})}" class="btn btn-warning">Restore</a>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
