--- a/src/main/resources/templates/student/student-update.html
+++ b/src/main/resources/templates/student/student-update.html
@@ -48,7 +48,7 @@
             <div th:if="${messageType} == 'error'" class="alert alert-danger" role="alert">
                 <span th:text="${message}"></span>
             </div>
-            <form action="#" th:action="@{/student/update/{id}(id=${student.id})}" th:object="${student}" method="post">
+            <form action="#" th:action="@{/student/update/{id}(id=${student.studentId})}" th:object="${student}" method="post">
                 <div class="form-group">
                     <label for="name">Student name</label>
                     <input type="text" th:field="*{name}" class="form-control" id="name" aria-describedby="nameHelp" required>
