--- a/src/main/resources/templates/teacher/teacher-list.html
+++ b/src/main/resources/templates/teacher/teacher-list.html
@@ -22,7 +22,7 @@
                     <a class="nav-link" href="/teacher/">Teacher</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/teacher/">Teacher</a>
+                    <a class="nav-link" href="/teacher/">Student</a>
                 </li>
                 <li class="nav-item dropdown active">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
